--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@shashankagarwalme/swt",
   "version": "1.0.1",
   "description": "Shashank Web Token(SWT)",
-  "main": "index.js",
+  "main": "swt.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
